# ARkit

./: CMakeLists.txt
android/Android/app/: build.gradle
android/Android/app/src/androidTest/java/com/arkit/android/: ExampleInstrumentedTest.java
android/Android/app/src/main/: AndroidManifest.xml
android/Android/app/src/main/java/com/arkit/android/: MainActivity.java
android/Android/app/src/main/jni/: arkit.c
android/Android/app/src/main/res/layout/: activity_main.xml
android/Android/app/src/test/java/com/arkit/android/: ExampleUnitTest.java
include/arkit/: arkit.hpp
include/arkit/core/: Object.hpp  Types.hpp
include/arkit/math/: Transform.hpp  Vec.hpp
include/arkit/rendering/: Renderable.hpp  Shader.hpp
include/arkit/scene/: Node.hpp  Scene.hpp
src/: CMakeLists.txt
src/arkit/math/: Vec.cpp
src/arkit/scene/: Node.cpp
